[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "gridplayer"
version = "0.4.2"
description = "Play videos side-by-side"
authors = ["vzhd1701 <vzhd1701@gmail.com>"]
readme = "README.md"
include = ["CHANGELOG.md"]
license = "GPL-3.0-or-later"
repository = "https://github.com/vzhd1701/gridplayer"
keywords = ["video", "player", "vlc", "pyqt", "Qt5", "multimedia"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Environment :: X11 Applications :: Qt",
    "Operating System :: MacOS",
    "Operating System :: Microsoft",
    "Operating System :: Unix",
    "Topic :: Multimedia :: Video :: Display",
]

[tool.poetry.urls]
"Changelog" = "https://github.com/vzhd1701/gridplayer/blob/master/CHANGELOG.md"

[tool.poetry.scripts]
gridplayer = "gridplayer.__main__:main"

[tool.poetry.dependencies]
python = "^3.8"
PyQt5 = "5.15.7"
pydantic = "^1.8.2"
python-vlc = "3.0.11115"
pyobjc-core = { version = "*", platform = "darwin" }
pyobjc-framework-Cocoa = { version = "*", platform = "darwin" }
streamlink = "4.2.0"
yt-dlp = "2022.6.29"

[tool.poetry.dev-dependencies]
isort = "^5.8.0"
flakehell = "^0.9.0"
wemake-python-styleguide = "^0.15.2"
black = "^21.5b1"
mdformat = "0.7.7"
pre-commit = "^2.15.0"
pytest = "^7.1.2"
keepachangelog = "^1.0.0"

[tool.flakehell]
base = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/flakehell.toml"
extended_default_ignore=[]
max_line_length = 88
exclude = [
    "gridplayer/*_ui.py",
    "gridplayer/resources_bin.py",
    "gridplayer/player/__init__.py",
    "tests/*.py",
    "gridplayer/resources/*",
]
# Pydantic config nested class
nested_classes_whitelist=["Config"]

[tool.flakehell.plugins]
# Disabled [personal preference]
# WPS111 short names
# WPS115 upper-case constant in a class - flag enums
# WPS226 String constant overuse
# WPS305 forbids f-strings
# WPS326 implicit line concat
# WPS336 explicit string concat
# WPS425 boolean non-keyword
# WPS428 ... <- nop statements, used in abstract classes
# WPS437 protected attribute usage
# WPS601 shadowed class attribute, doesn't work for dataclasses
#   Qt setAttribute functions
# Docstings, don't have any

# !! Enable later and refactor
# WPS201 too many imports
# WPS214 too many methods

# Exceptions [false positives & formatting]
# WPS317 incorrect multi-line parameters <- black formatting
# C812 trailing comma <- handled by black
# E203 whitespace before : <- handled by black
# W503 Line break occurred before a binary operator

# Bandit
# S404 subprocess module

# E800 TEMPORARILY DISABLE COMMENTED CODE
#flake8-eradicate = ["+*", "-E800"]

pycodestyle = ["+*", "-E203", "-W503"]
flake8-bandit = ["+*", "-S404"]
flake8-commas = ["+*", "-C812", "-C815"]
flake8-quotes = ["+*", "-Q000"]
flake8-rst-docstrings = ["-*"]
flake8-docstrings = ["-*"]
flake8-darglint = ["-*"]
wemake-python-styleguide = ["+*", "-WPS111", "-WPS115", "-WPS201", "-WPS214", "-WPS226", "-WPS305", "-WPS317", "-WPS326", "-WPS336", "-WPS425", "-WPS428", "-WPS437", "-WPS601"]

[tool.flakehell.exceptions."gridplayer/version.py"]
# I like it this way
wemake-python-styleguide = ["-WPS410"]

[tool.flakehell.exceptions."gridplayer/utils/"]
# Crossplatform functions
# WPS110 Wrong names
# WPS339 0x0000 values
# WPS433 Nested imports
# WPS440 Protected modules
wemake-python-styleguide = ["+*", "-WPS110", "-WPS339", "-WPS433", "-WPS440"]

[tool.flakehell.exceptions."gridplayer/widgets/video_overlay_icons.py"]
# Manually drawn icons, need to do something about them later
# WPS204 overused expression
# WPS213 too many expressions
# WPS221 Jones Complexity
# WPS432 magic numbers
wemake-python-styleguide = ["+*", "-WPS204", "-WPS213", "-WPS221", "-WPS432"]

[tool.flakehell.exceptions."gridplayer/dialogs/messagebox.py"]
# Overriding Qt class
# WPS211 too many arguments
# WPS404 complex defaults
wemake-python-styleguide = ["+*", "-WPS211", "-WPS404"]

[tool.flakehell.exceptions."gridplayer/params/static.py"]
# WPS202 too many modules
wemake-python-styleguide = ["+*", "-WPS202"]

[tool.flakehell.exceptions."gridplayer/player/managers/actions.py"]
# WPS204 overused expression
# translate
wemake-python-styleguide = ["+*", "-WPS204"]

[tool.flakehell.exceptions."gridplayer/__main__.py"]
# WPS433 nested imports
wemake-python-styleguide = ["+*", "-WPS433"]

[tool.black]
line-length = 88
exclude = '(.*\/resources_bin\.py)'

[tool.isort]
profile = "black"
skip_gitignore = true
